--- a/package.json
+++ b/package.json
@@ -20,10 +20,14 @@
     "classnames": "^2.2.6",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
+    "express": "^4.16.3",
+    "hbs": "^4.0.1",
     "prop-types": "^15.6.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
+    "react-thunk": "^1.0.0",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0"
   },
